--- a/.github/workflows/deploy-keycloak.yml
+++ b/.github/workflows/deploy-keycloak.yml
@@ -3,7 +3,7 @@ name: Deploy Keycloak to Azure App Service
 on:
   push:
     branches:
-      - main # Executa o workflow em pushes para a branch "main".
+      - main # Executa o workflow ao fazer push na branch "main".
 
 jobs:
   build-and-deploy:
@@ -29,20 +29,16 @@ jobs:
     - name: Push Docker image
       run: docker push filipaicognitus/keycloak-h2-persistent:latest
 
-    # 5. Login no Azure CLI
+    # 5. Login interativo no Azure
     - name: Log in to Azure
-      uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_APP_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        client-secret: ${{ secrets.AZURE_PASSWORD }}
+      run: az login
 
     # 6. Atualizar o App Service no Azure
-    - name: Deploy to Azure App Service
+    - name: Update Azure App Service
       run: |
         az webapp config container set \
           --name meu-keycloak-app \
           --resource-group grupoappkeycloack \
           --docker-custom-image-name filipaicognitus/keycloak-h2-persistent:latest \
           --docker-registry-server-url https://index.docker.io/v1/
+
